--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "^4.22.1",
     "http-errors": "~1.6.3",
     "jade": "^1.9.2",
+    "joi": "^18.0.2",
     "morgan": "^1.10.1",
     "mysql2": "^3.16.1",
     "sequelize": "^6.37.7"
